@@ -3,10 +3,12 @@
 
 from trytond.pool import Pool
 from .invoice import *
+from . import asset
 
 
 def register():
     Pool.register(
         InvoiceLine,
         AnalyticAccountEntry,
+        asset.Asset,
         module='analytic_invoice', type_='model')
