@@ -1,0 +1,12 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<tryton>
+    <data depends="account_asset">
+        <record model="ir.ui.view" id="asset_view_form">
+            <field name="model">account.asset</field>
+            <field name="inherit" ref="account_asset.asset_view_form"/>
+            <field name="name">asset_form</field>
+        </record>
+    </data>
+</tryton>
