@@ -3,5 +3,7 @@ version=4.1.0
 depends:
     account_invoice
     analytic_account
+extras_depend:
+    account_asset
 xml:
     invoice.xml
