@@ -1,0 +1,10 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<data>
+    <xpath expr="/form/notebook/page[@id='lines']" position="after">
+        <page name="analytic_accounts" col="1">
+            <field name="analytic_accounts"/>
+        </page>
+    </xpath>
+</data>
