@@ -1,3 +1,5 @@
+* Add support for depreciable assets
+
 Version 4.0.0 - 2016-05-02
 * Bug fixes (see mercurial logs for details)
 * Add Python3 support
